feat: 香澳推荐8码保存于完善

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,6 +42,13 @@
       </div>
       <div id="recommendPage" style="display:none;">
         <h2>推荐8码</h2>
+        <div style="margin-bottom:16px;">
+          <label class="records-query-label">选择彩种：</label>
+          <div class="recommend-type-group">
+            <button class="recommend-type-btn active" data-type="am">澳门</button>
+            <button class="recommend-type-btn" data-type="hk">香港</button>
+          </div>
+        </div>
         <div id="recommendResult" style="margin-top:16px;"></div>
       </div>
       <div id="recordsPage" style="display:none;">
