左边栏增加了分析推荐收放功能，优化菜单分组

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,12 @@
       <h2 style="color:#2980d9;text-align:center;margin:18px 0 30px 0;">彩票分析系统</h2>
       <button class="menu-btn" id="menuCollectBtn">采集</button>
       <button class="menu-btn" id="menuRecordsBtn">开奖结果</button>
-      <button class="menu-btn" id="menuRecommendBtn">推荐8码</button>
-      <button class="menu-btn" id="menuTensBtn">第N位十位分析</button>
+      <button id="toggleSidebarBtn" style="width:90%;margin:0 5%;margin-bottom:12px;background:#fffbe9;color:#c0392b;font-weight:bold;border:1px solid #f5c16c;border-radius:7px;padding:8px 0;cursor:pointer;">分析推荐 ▼</button>
+      <div id="sidebarMenuBtns">
+        <button class="menu-btn" id="menuRecommendBtn">推荐8码</button>
+        <button class="menu-btn" id="menuTensBtn">第N位十位分析</button>
+        <button class="menu-btn" id="menuUnitsBtn">第N个码个位分析</button>
+      </div>
     </aside>
     <main class="main-content">
       <header class="page-header">
