feat: 完善+1~+20区间分析，支持多彩种、球位、年份、遗漏统计、预测区间、UI优化等

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
         <button class="menu-btn" id="menuRecommendBtn">推荐8码</button>
         <button class="menu-btn" id="menuTensBtn">第N位十位分析</button>
         <button class="menu-btn" id="menuUnitsBtn">第N个码个位分析</button>
+        <button class="menu-btn" id="menuRangeBtn">+1~+20区间分析</button>
       </div>
     </aside>
     <main class="main-content">
