--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,16 @@
         <button class="menu-btn" id="menuRangeBtn">+1~+20区间分析</button>
         <button class="menu-btn" id="menuPlusMinus6Btn">加减前6码分析</button>
       </div>
+      <button id="toggleRegisterBtn" style="width:90%;margin:0 5%;margin-bottom:12px;background:#fffbe9;color:#c0392b;font-weight:bold;border:1px solid #f5c16c;border-radius:7px;padding:8px 0;cursor:pointer;">
+        登记点分析 <span id="registerCollapseIcon">▼</span>
+      </button>
+      <div id="registerMenuBtns" style="display:none; margin-bottom:12px;">
+        <button class="menu-btn" id="menuRegisterFocusBtn">登记关注点</button>
+        <button class="menu-btn" id="menuRegisterBetBtn">投注登记点</button>
+        <button class="menu-btn" id="menuRegisterFocusResultBtn">关注点登记结果</button>
+        <button class="menu-btn" id="menuRegisterFocusAnalysisBtn">关注点分析</button>
+        <button class="menu-btn" id="menuRegisterBetReportBtn">投注点报表</button>
+      </div>
     </aside>
     <main class="main-content">
       <header class="page-header">
@@ -47,6 +57,11 @@
         </div>
         <div id="collectResult" style="margin-top:16px;"></div>
       </div>
+      <div id="registerFocusPage" style="display:none;"><h2>登记关注点</h2></div>
+      <div id="registerBetPage" style="display:none;"><h2>投注登记点</h2></div>
+      <div id="registerFocusResultPage" style="display:none;"><h2>关注点登记结果</h2></div>
+      <div id="registerFocusAnalysisPage" style="display:none;"><h2>关注点分析</h2></div>
+      <div id="registerBetReportPage" style="display:none;"><h2>投注点报表</h2></div>
       <div id="recommendPage" style="display:none;">
         <h2>推荐8码</h2>
         <div style="margin-bottom:16px;">
