完善每期分析页面：添加期数个位分组查询、导出全部数据、按钮样式优化、修复页面切换逻辑

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -176,6 +176,15 @@
             <button class="each-issue-type-btn active" data-type="am">澳门</button>
             <button class="each-issue-type-btn" data-type="hk">香港</button>
           </div>
+          <label class="records-query-label" style="margin-left:24px;">期数个位分组：</label>
+          <div class="each-issue-unit-group" style="display:inline-block;">
+            <button class="each-issue-unit-btn active" data-group="">全部</button>
+            <button class="each-issue-unit-btn" data-group="0">0/5组</button>
+            <button class="each-issue-unit-btn" data-group="1">1/6组</button>
+            <button class="each-issue-unit-btn" data-group="2">2/7组</button>
+            <button class="each-issue-unit-btn" data-group="3">3/8组</button>
+            <button class="each-issue-unit-btn" data-group="4">4/9组</button>
+          </div>
         </div>
         <div id="eachIssueResult" style="margin-top:16px;"></div>
       </div>
