简单的修改

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -358,6 +358,7 @@
             <button class="seventh-range-type-btn" data-type="hk">香港</button>
           </div>
           <button id="startSeventhSmart20Btn" class="btn-primary" style="margin-top: 10px;">开始智能分析</button>
+          <button id="showSeventhSmart20DetailsBtn" class="btn-primary" style="margin-top: 10px; margin-left: 10px;">查看逐期记录</button>
           <button id="exportSeventhSmart20Btn" class="btn-secondary" style="margin-top: 10px; margin-left: 10px;">导出CSV</button>
         </div>
 
