--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1008,7 +1008,7 @@
         </div>
         
         <!-- 分析结果区域 -->
-        <div id="favoriteNumberAnalysisResult" style="display:none;margin-top:20px;"></div>
+        <div id="favoriteNumberAnalysisResult" style="display:none;margin-top:30px;padding:20px;border:3px dashed #667eea;border-radius:12px;background:#f8f9fa;min-height:100px;"></div>
       </div>
       
       <div id="registerBetReportPage" class="hidden">
